--- a/styles.css
+++ b/styles.css
@@ -179,10 +179,16 @@ header h1 {
   color: #A3A3A3;
 }
 
+#open-btn:hover {
+  color: #FFF;
+}
+
 #open-btn span {
   color: #87C929;
   margin:0 5px;
 }
+
+
 
 .current-page {
   display: flex;
@@ -456,6 +462,10 @@ header h1 {
   width: 75%;
   padding: 15px 5px;
   margin-bottom: 20px;
+}
+
+#resume-link {
+  width: 95%;
 }
 
 .url-field button {
